# gadd

./: .buildinfo  .gitignore  CITATION.bib  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs_deploy.yml
_modules/: index.html
_modules/gadd/: circuit_padding.html  gadd.html  group_operations.html  sequences.html  strategies.html  utility_functions.html
_sources/: index.rst.txt
_sources/api/: strategies.rst.txt
api/: circuit_padding.html  gadd.html  group_operations.html  sequences.html  strategies.html  utility_functions.html
docs/: Makefile  conf.py  index.rst  installation.rst
docs/api/: circuit_padding.rst  gadd.rst  group_operations.rst  sequences.rst  utility_functions.rst
gadd/: __init__.py  circuit_padding.py  experiments.py  gadd.py  group_operations.py  library.py  sequences.py  strategies.py  utility_functions.py
tests/: fixtures.py  test_circuit_padding.py  test_experiments.py  test_fixtures.py  test_gadd.py  test_gadd_integration.py  test_group_operations.py  test_integration.py  test_library.py  test_sequences.py  test_strategies.py  test_utility_functions.py
